# librmcp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.rst  meson.build
doc/rmcp/: message_format.rst
include/: impi.h  log.h  rmcp.h
src/: open_session.c  print_ping.c  rmcp.c  rmpc.c  test.c
util/: printb.c
